--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/radial_background"
     android:orientation="vertical"
-    tools:context="com.example.bins.rookieagent.MainActivity">
+    tools:context="com.example.bins.rookieagent.Home">
 
     <ImageView
         android:id="@+id/homeLogo"
@@ -26,8 +26,8 @@
         <android.support.v7.widget.AppCompatButton
             android:id="@+id/btnStart"
             style="@style/Button_home"
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:layout_weight="33"
             android:text="@string/start"
             android:textColor="@color/black"
@@ -37,8 +37,8 @@
         <android.support.v7.widget.AppCompatButton
             android:id="@+id/btnOption"
             style="@style/Button_home"
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:layout_weight="33"
             android:text="@string/option"
             android:textColor="@color/black"
@@ -48,8 +48,8 @@
         <android.support.v7.widget.AppCompatButton
             android:id="@+id/btnQuit"
             style="@style/Button_home"
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:layout_weight="33"
             android:text="@string/exit"
             android:textColor="@color/black"
