--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -18,6 +18,7 @@
     <style name="Button_home" parent="@android:style/Widget.Button">
         <item name="android:textStyle">bold</item>
         <item name="android:textSize">20sp</item>
+        <item name="android:layout_margin">5dp</item>
     </style>
 
 </resources>
