--- a/app/src/main/res/layout-land/activity_jeu.xml
+++ b/app/src/main/res/layout-land/activity_jeu.xml
@@ -3,38 +3,37 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     tools:context="com.example.bins.rookieagent.Jeu">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="match_parent"
         android:layout_gravity="center"
-        android:layout_weight="33"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_weight="50">
 
         <TextView
-        android:id="@+id/editTexteLocalisation"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="@string/localisation"
-        android:textSize="24sp"
-        android:textStyle="bold" />
+            android:id="@+id/editTexteLocalisation"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="@string/localisation"
+            android:textSize="24sp"
+            android:textStyle="bold" />
 
         <ImageView
             android:id="@+id/imageViewMap"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:contentDescription="@string/map_part_desc"
             android:src="@drawable/img_404" />
     </LinearLayout>
 
     <TableLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="match_parent"
         android:layout_gravity="center"
-        android:layout_weight="66"
+        android:layout_weight="50"
         android:orientation="horizontal">
 
         <TableRow
