--- a/app/src/main/res/layout/activity_jeu.xml
+++ b/app/src/main/res/layout/activity_jeu.xml
@@ -11,7 +11,8 @@
         android:layout_height="0dp"
         android:layout_gravity="center"
         android:layout_weight="40"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        tools:ignore="UseCompoundDrawables">
 
         <TextView
             android:id="@+id/textViewLocalisation"
